--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,14 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "laravel/framework": "^7.0|^8.74|^9.0"
+        "laravel/framework": "^10.0"
+
+
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master",
-        "orchestra/testbench": "^4.0|^5.0|^6.4",
+        
+        "orchestra/testbench": "^8.0"
+,
         "phpunit/phpunit": "^8.0|^9.5.8"
     },
     "autoload": {
